--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "citeproc-cite-service",
     "version": "1.0.1",
-    "description": "Reduces Zotero API returns to citations, tags, a link, and a key",
+    "description": "Reduces Zotero API returns to a citation, tags, a link, and a key",
     "main": "index.js",
     "scripts": {
         "start": "node ./index.js",
@@ -22,6 +22,10 @@
     ],
     "author": "Frank Bennett",
     "license": "ISC",
+    "repository": {
+        "type" : "git",
+        "url" : "https://github.com/Juris-M/citeproc-cite-service.git"
+    },
     "dependencies": {
         "citeproc": "^2.2.1",
         "citeproc-abbrevs": "^1.0.1",
