--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "citeproc-cite-service",
-    "version": "1.0.6",
+    "version": "1.0.7,
     "description": "Reduces Zotero API returns to a citation, tags, a link, and a key",
     "main": "index.js",
     "scripts": {
@@ -27,11 +27,11 @@
         "url": "https://github.com/Juris-M/citeproc-cite-service.git"
     },
     "dependencies": {
-        "citeproc": "^2.2.5",
+        "citeproc": "^2.2.6",
         "citeproc-abbrevs": "^1.0.4",
         "citeproc-juris-modules": "^1.0.5",
         "citeproc-locales": "^1.0.2",
-        "restify": "^8.3.2",
+        "restify": "^8.3.3",
         "zotero-to-csl": "^1.2.0",
         "zotero2jurismcsl": "^0.0.10"
     },
