--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "citeproc-cite-service",
-    "version": "1.0.7,
+    "version": "1.0.7",
     "description": "Reduces Zotero API returns to a citation, tags, a link, and a key",
     "main": "index.js",
     "scripts": {
