--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
     "name": "citeproc-cite-service",
-    "version": "1.0.7",
-    "description": "Reduces Zotero API returns to a citation, tags, a link, and a key",
+    "version": "2.0.7",
+    "description": "A limited read-only sync of items and attachments from a Jurism/Zotero library",
     "main": "index.js",
-    "scripts": {
-        "start": "node ./index.js",
-        "test": "mocha"
-    },
+    "scripts": {},
     "bin": {
-        "citeservice": "./index.js"
+        "zsyncdown": "./index.js"
     },
+    "files": [
+        "README.md",
+        "jm-chicago-fullnote-bibliography.csl",
+        "chicago-fullnote-bibliography.csl"
+    ],
     "keywords": [
         "csl",
         "digital",
@@ -27,16 +29,15 @@
         "url": "https://github.com/Juris-M/citeproc-cite-service.git"
     },
     "dependencies": {
-        "citeproc": "^2.2.6",
-        "citeproc-abbrevs": "^1.0.4",
-        "citeproc-juris-modules": "^1.0.5",
-        "citeproc-locales": "^1.0.2",
-        "restify": "^8.3.3",
-        "zotero-to-csl": "^1.2.0",
-        "zotero2jurismcsl": "^0.0.10"
+        "citeproc": ">=2.2.6",
+        "citeproc-abbrevs": ">=1.0.4",
+        "citeproc-juris-modules": ">=1.0.5",
+        "citeproc-locales": ">=1.0.2",
+        "getopts": "^2.2.5",
+        "regenerator-runtime": "^0.13.2",
+        "superagent": "^5.1.0",
+        "zotero-to-csl": ">=1.2.0",
+        "zotero2jurismcsl": ">=0.0.10"
     },
-    "devDependencies": {
-        "chai": "^4.2.0",
-        "chai-http": "^4.3.0"
-    }
+    "devDependencies": {}
 }
