--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "citeproc-cite-service",
-    "version": "2.1.10",
+    "version": "2.1.11",
     "description": "A limited read-only sync of items and attachments from a Jurism/Zotero library",
     "main": "index.js",
     "scripts": {},
@@ -29,13 +29,13 @@
         "url": "https://github.com/Juris-M/citeproc-cite-service.git"
     },
     "dependencies": {
-        "citeproc": ">=2.2.27",
-        "citeproc-abbrevs": "^1.1.6",
-        "citeproc-juris-modules": "^1.0.7",
+        "citeproc": "^2.2.31",
+        "citeproc-abbrevs": "^1.1.7",
+        "citeproc-juris-modules": "^1.0.8",
         "citeproc-locales": ">=1.0.2",
         "getopts": "^2.2.5",
         "regenerator-runtime": "^0.13.3",
-        "superagent": "^5.1.0",
+        "superagent": "^5.2.1",
         "zotero-to-csl": ">=1.2.0",
         "zotero2jurismcsl": ">=0.0.10"
     },
