--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "citeproc-cite-service",
-    "version": "2.1.25",
+    "version": "2.1.26",
     "description": "A limited read-only sync of items and attachments from a Jurism/Zotero library",
     "main": "index.js",
     "scripts": {},
@@ -29,15 +29,15 @@
         "url": "https://github.com/Juris-M/citeproc-cite-service.git"
     },
     "dependencies": {
-        "citeproc": "^2.4.14",
-        "citeproc-abbrevs": "^1.1.40",
-        "citeproc-juris-modules": "^1.0.19",
+        "citeproc": "^2.4.47",
+        "citeproc-abbrevs": "^1.1.45",
+        "citeproc-juris-modules": "^1.0.24",
         "citeproc-locales": ">=1.0.2",
         "getopts": "^2.2.5",
         "regenerator-runtime": "^0.13.7",
         "superagent": "^5.3.1",
         "zotero-to-csl": ">=1.2.0",
-        "zotero2jurismcsl": ">=0.0.10"
+        "zotero2jurismcsl": "0.0.11"
     },
     "devDependencies": {}
 }
