--- a/cultexp/package.json
+++ b/cultexp/package.json
@@ -7,10 +7,14 @@
     "markdown-it": "^12.3.0",
     "csv-parse": "^5.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^27.4.4"
+  },
+  "bin": {
+    "make-data": "./make-data.js"
+  },
   "scripts": {
-    "make-data": "node ./make-data.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Frank Bennett",
   "license": "ISC"
