--- a/cultexp/package.json
+++ b/cultexp/package.json
@@ -4,18 +4,20 @@
   "description": "Generate Jurism-compatible CSL-JSON import file from CULTEXP CSV data.",
   "main": "make-data.js",
   "dependencies": {
-    "markdown-it": "^12.3.0",
     "csv-parse": ">=5.0.3",
-    "getopts": "^2.3.0"
+    "getopts": "^2.3.0",
+    "markdown-it": "^12.3.0"
   },
   "devDependencies": {
-    "jest": "^27.4.4"
+    "jest": "^27.4.4",
+    "jsdoc": "^4.0.2"
   },
   "bin": {
-    "make-data": "./make-data.js"
+      "make-data": "./make-data.js"
   },
   "scripts": {
-    "test": "jest"
+      "test": "jest",
+      "doc": "jsdoc -c ./etc/jsdoc-config.json make-data.js"
   },
   "author": "Frank Bennett",
   "license": "ISC"
