--- a/cultexp/package.json
+++ b/cultexp/package.json
@@ -4,6 +4,7 @@
   "description": "Generate Jurism-compatible CSL-JSON import file from CULTEXP CSV data.",
   "main": "make-data.js",
   "dependencies": {
+    "clean-text-utils": "^1.1.17",
     "csv-parse": ">=5.0.3",
     "getopts": "^2.3.0",
     "markdown-it": "^12.3.0"
@@ -13,11 +14,11 @@
     "jsdoc": "^4.0.2"
   },
   "bin": {
-      "make-data": "./make-data.js"
+    "make-data": "./make-data.js"
   },
   "scripts": {
-      "test": "jest",
-      "doc": "jsdoc -c ./etc/jsdoc-config.json make-data.js"
+    "test": "jest",
+    "doc": "jsdoc -c ./etc/jsdoc-config.json make-data.js"
   },
   "author": "Frank Bennett",
   "license": "ISC"
