--- a/cultexp/package.json
+++ b/cultexp/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "clean-text-utils": "^1.1.17",
     "csv-parse": ">=5.0.3",
+    "csv-stringify": "^6.4.4",
     "getopts": "^2.3.0",
     "markdown-it": "^12.3.0"
   },
